--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ install:
 - yarn
 script:
 - yarn build
+- git add .
+- git commit -m 'release:github pages'
+- git config --local user.name "haitaodesign"
+- git config --local user.email "15393243613@163.com"
+- git push -f https://${GITHUB_TOKEN}@github.com/haitaodesign/learning-resource.github.io.git master
 branches:
   only:
   - master
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: "$GITHUB_TOKEN"
-  keep_history: true
-  on:
-    branch: master
