ci: 修改发布地址

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 - git commit -m 'release:github pages'
 - git config --local user.name "haitaodesign"
 - git config --local user.email "15393243613@163.com"
-- git push -f https://${GITHUB_TOKEN}@github.com/haitaodesign/learning-resource.github.io.git master
+- git push -f https://${GITHUB_TOKEN}@github.com/haitaodesign/learning-resource.git master
 branches:
   only:
   - master
