--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev",
-    "build": "vuepress build"
+    "build": "vuepress build",
+    "deploy": "sh deploy.sh"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,12 @@
   },
   "homepage": "https://github.com/haitaodesign/learning-resource#readme",
   "devDependencies": {
+    "husky": "^3.0.1",
     "vuepress": "^0.14.8"
+  },
+  "husky": {
+    "hooks": {
+      "deploy": "sh deploy.sh"
+    }
   }
 }
